# CM2Editer

./: .clippy.toml  .gitignore  .markdownlint.json  AGENTS.md  CHANGELOG.md  Cargo.toml  Cargo.toml.txt  LICENSE  README.md  package.ps1  rustfmt.toml
assets/coordinates/: default.json
assets/i18n/: en.json  ja.json  zh.json
assets/namespaces/: adult_toy.json  avatar_type.json  body_paint_type.json  cosplay.json  fixed_type.json  hair_type.json  player_data.json
docs/: TODO.md  agent_prompt.md  agent_prompt_phase3.md  analysis_mission_panel_workflows.md  architecture_evaluation.md  audit_checklist.md.dis  code_api_reference.md  code_pseudocode_map.md  documentation.html  documentation_zh.html  hotkey_management.md  i18n.md  if_condition_design.md  interaction_spec.md  json_schema.md  label_management_plan.md  label_ownership_rules.md  migration_guide.md  node_details.md  node_types.md  rust_project_skeleton.md  selected_cosplay .json  syntax_coverage.md  test_checklist.md  test_flow_diagram.md  tutorial_make_code.md  ui_design_spec.md  紧急修复清单.md  问题清单.md
docs/archive/: README.md  TODO-2026-07-08.md  TODO_20260708_v5.md  agent_prompt_phase3.md  agent_prompt_v1_full.md  audit2_checklist.md.dis  discovery_20260709_dsl_model.md  (+8 more)
src/: app.rs  count_rust_code.py  error.rs  lib.rs  main.rs  project.rs  settings.rs
src/api/: mod.rs  (+6 more)
tests/: code_gen.rs  examples_verify.rs  json_roundtrip.rs  test1.code  test1.json  test2.code  test2.json  test3.json  test4.json  testerror.json
tools/: count_rust_code.py  fix_md_fences.py  generate_kb_index.py  split_html_by_lines.py
(+62 files in other folders)
