[package]
name = "CM2Editer"
version = "0.2.1"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.8", features = ["v4"] }
egui = "0.31"
eframe = "0.31"
rfd = "0.15"

[lints.rust]
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
redundant_clone = "warn"
needless_pass_by_value = "warn"
